Add short summaries

--- a/content/specs/spec-0000.md
+++ b/content/specs/spec-0000.md
@@ -4,14 +4,15 @@ date: 2020-12-17T19:53:08-08:00
 draft: false
 author: 'Jarrod Millman \<<millman@berkeley.edu>\>'
 status: Draft
+summary: |
+  SPEC stands for Scientific Python Ecosystem Community Standard.
+  SPECs are the primary mechanism for coordinating the scientific
+  Python ecosystem.
 ---
 
 What is a SPEC?
 ===============
 
-SPEC stands for Scientific Python Ecosystem Community Standard.
-SPECs are the primary mechanism for coordinating the scientific
-Python ecosystem.
 The SPEC author is responsible for building consensus within the
 community and documenting dissenting opinions.
 
