--- a/content/specs/spec-0001.md
+++ b/content/specs/spec-0001.md
@@ -16,13 +16,16 @@ created: '2019-07-13'
 resolution: '<https://mail.python.org/pipermail/numpy-discussion/2019-October/080128.html>'
 status: Final
 type: Informational
+summary: |
+  Recommends a "time window-based" policy for dropping support for
+  old versions of Python and NumPy.
 ---
 
 Abstract
 ========
 
 This SPEC recommends that all projects across the Scientific Python
-ecosystem adopt a common \"time window-based\" policy for support of
+ecosystem adopt a common "time window-based" policy for support of
 Python and NumPy versions. Standardizing a recommendation for project
 support of minimum Python and NumPy versions will improve downstream
 project planning.
