Rename site and SPECs

--- a/content/specs/spec-0000.md
+++ b/content/specs/spec-0000.md
@@ -5,9 +5,9 @@ draft: false
 author: 'Jarrod Millman \<<millman@berkeley.edu>\>'
 status: Draft
 summary: |
-  SPEC stands for Scientific Python Ecosystem Community Standard.
-  SPECs are the primary mechanism for coordinating the scientific
-  Python ecosystem.
+  SPEC stands for Scientific Python Ecosystem Coordination.
+  SPECs are the primary mechanism for coordinating packages in
+  the scientific Python ecosystem.
 ---
 
 What is a SPEC?
