--- a/content/specs/spec-0000.md
+++ b/content/specs/spec-0000.md
@@ -5,9 +5,9 @@ draft: false
 author: 'Jarrod Millman \<<millman@berkeley.edu>\>'
 status: Draft
 summary: |
-  SPEC stands for Scientific Python Ecosystem Coordination.
-  SPECs are the primary mechanism for coordinating packages in
-  the scientific Python ecosystem.
+  The Scientific Python Ecosystem Coordination (SPEC) mechanism
+  is used to recommend project policies, coding conventions,
+  and standard tooling.
 ---
 
 What is a SPEC?
@@ -50,19 +50,6 @@ for more information.
 We use [Hugo](https://www.markdownguide.org/) to convert SPECs to HTML
 for viewing on the web [^2].
 
-
-Header Preamble
----------------
-
-Each NXEP must begin with a header preamble. The headers must appear in
-the following order. Headers marked with `*` are optional. All other
-headers are required. :
-
-    :Author: <list of authors' real names and optionally, email addresses>
-    :Status: <Draft | Active | Accepted | Deferred | Rejected |
-             Withdrawn | Final | Superseded>
-    :Type: <Standards Track | Process>
-    :Created: <date created on, in dd-mmm-yyyy format>
 
 References and Footnotes
 ========================
