--- a/content/specs/spec-0002.md
+++ b/content/specs/spec-0002.md
@@ -2,11 +2,10 @@
 title: "SPEC 2 --- Lazy Loading for Submodules"
 date: 2020-12-17T18:15:04-08:00
 draft: false
+author: 'Stefan van der Walt \<<stefanv@berkeley.edu>\>'
 summary: |
-  Scientific Python used to import submodules explicitly, but because of 
-  performance reasons stopped doing so.  We propose lazy loading functionality
-  that will return the benefits of an easily-accessible namespace, but without
-  compromising performance.
+  Recommends lazy loading functionality for an easily-accessible namespace,
+  but without compromising performance.
 ---
 
 Early on, most scientific Python packages explicitly imported their submodules.  For example, you would be able to do:
