--- a/content/specs/spec-0001.md
+++ b/content/specs/spec-0001.md
@@ -1,193 +1,94 @@
 ---
-title: SPEC 1 — Minimum Python, NumPy, and SciPy
+title: SPEC 1 — Minimum Supported Python, NumPy, SciPy, and Matplotlib
 date: 2020-12-17T18:15:04-08:00
 draft: false
 author: 'Jarrod Millman <millman@berkeley.edu>'
 summary: |
-  Recommends a "time window-based" policy for dropping support for
-  old versions of Python, NumPy, and SciPy.
+  Recommends a drop schedule for old versions of Python, NumPy, SciPy, and Matplotlib.
 ---
 
-Abstract
-========
+
+Description
+===========
 
 This SPEC recommends that all projects across the Scientific Python
-ecosystem adopt a common "time window-based" policy for support of
-Python, NumPy, and SciPy versions.
-Standardizing a recommendation for project support of minimum Python,
-NumPy, and SciPy versions will improve downstream project planning.
-
-Detailed description
-====================
-
-This SPEC is based off of [NEP 29[](https://numpy.org/neps/nep-0029-deprecation_policy.html).
-
-For the purposes of this SPEC we assume semantic versioning and define:
-
-*major version*
-   A release that changes the first number (e.g. X.0.0)
-
-*minor version*
-   A release that changes the second number (e.g 1.Y.0)
-
-*patch version*
-   A release that changes the third number (e.g. 1.1.Z)
-
-
-Python has a minor release annually (see  https://www.python.org/dev/peps/pep-0602/).
-NumPy and SciPy both make minor releases around twice a year.
-
-When a project releases a new major or minor version, we recommend that
-they support at least all minor versions of Python introduced and
-released in the prior 42 months *from the anticipated release date* with
-a minimum of 2 minor versions of Python, and all minor versions of NumPy
-released in the prior 24 months *from the anticipated release date* with
-a minimum of 3 minor versions of NumPy.
-
-Support Table
--------------
-
-  Date           Python   NumPy
-  -------------- -------- -------
-  Jan 13, 2021   3.7+     1.17+
-  Jul 26, 2021   3.7+     1.18+
-  Dec 22, 2021   3.7+     1.19+
-  Dec 26, 2021   3.8+     1.19+
-  Jun 21, 2022   3.8+     1.20+
-  Apr 14, 2023   3.9+     1.20+
+ecosystem adopt a common time-based policy for dropping 
+support of older Python, NumPy, SciPy, and Matplotlib versions.
+We recommend that projects drop support for versions of Python 42 months after
+its intial release and for versions of NumPy, SciPy, and Matplotlib 24 months
+after their intial releases.
 
 Drop Schedule
 -------------
 
     On Jan 13, 2021 drop support for NumPy 1.16 (initially released on Jan 13, 2019)
+    On May 17, 2021 drop support for SciPy 1.3 (initially released on May 17, 2019)
+    On May 18, 2021 drop support for Matplotlib 3.1 (initially released on May 18, 2019)
     On Jul 26, 2021 drop support for NumPy 1.17 (initially released on Jul 26, 2019)
+    On Dec 16, 2021 drop support for SciPy 1.4 (initially released on Dec 16, 2019)
     On Dec 22, 2021 drop support for NumPy 1.18 (initially released on Dec 22, 2019)
     On Dec 26, 2021 drop support for Python 3.7 (initially released on Jun 27, 2018)
+    On Mar 05, 2022 drop support for Matplotlib 3.2 (initially released on Mar 04, 2020)
     On Jun 21, 2022 drop support for NumPy 1.19 (initially released on Jun 20, 2020)
+    On Jun 22, 2022 drop support for SciPy 1.5 (initially released on Jun 21, 2020)
+    On Jul 17, 2022 drop support for Matplotlib 3.3 (initially released on Jul 16, 2020)
+    On Jan 01, 2023 drop support for SciPy 1.6 (initially released on Dec 31, 2020)
     On Apr 14, 2023 drop support for Python 3.8 (initially released on Oct 14, 2019)
+    On Apr 05, 2024 drop support for Python 3.9 (initially released on Oct 05, 2020)
+
+Support Table
+-------------
+
+| Date         | Python   | NumPy   | SciPy   | Matplotlib   |
+|--------------|----------|---------|---------|--------------|
+| Jul 23, 2020 | 3.7+     | 1.16+   | 1.2+    | 3.0+         |
+| Sep 18, 2020 | 3.7+     | 1.16+   | 1.2+    | 3.1+         |
+| Dec 17, 2020 | 3.7+     | 1.16+   | 1.3+    | 3.1+         |
+| Jan 13, 2021 | 3.7+     | 1.17+   | 1.3+    | 3.1+         |
+| May 17, 2021 | 3.7+     | 1.17+   | 1.4+    | 3.1+         |
+| May 18, 2021 | 3.7+     | 1.17+   | 1.4+    | 3.2+         |
+| Jul 26, 2021 | 3.7+     | 1.18+   | 1.4+    | 3.2+         |
+| Dec 16, 2021 | 3.7+     | 1.18+   | 1.5+    | 3.2+         |
+| Dec 22, 2021 | 3.7+     | 1.19+   | 1.5+    | 3.2+         |
+| Dec 26, 2021 | 3.8+     | 1.19+   | 1.5+    | 3.2+         |
+| Mar 05, 2022 | 3.8+     | 1.19+   | 1.5+    | 3.3+         |
+| Jun 21, 2022 | 3.8+     | 1.20+   | 1.5+    | 3.3+         |
+| Jun 22, 2022 | 3.8+     | 1.20+   | 1.6+    | 3.3+         |
+| Jul 17, 2022 | 3.8+     | 1.20+   | 1.6+    | 3.4+         |
+| Jan 01, 2023 | 3.8+     | 1.20+   | 1.7+    | 3.4+         |
+| Apr 14, 2023 | 3.9+     | 1.20+   | 1.7+    | 3.4+         |
+| Apr 05, 2024 | 3.10+    | 1.20+   | 1.7+    | 3.4+         |
 
 Implementation
 ==============
 
-We suggest that all projects adopt the following language into their
-development guidelines:
+Projects adopting this SPEC should create a PR
+(https://github.com/scientific-python/scientific-python.org/pulls) to add their
+names to the list below:
 
-> This project supports:
->
-> -   All minor versions of Python released 42 months prior to the
->     project, and at minimum the two latest minor versions.
-> -   All minor versions of `numpy` released in the 24 months prior to
->     the project, and at minimum the last three minor versions.
-> -   All minor versions of `scipy` released in the 24 months prior to
->     the project, and at minimum the last three minor versions.
->
-> In `setup.py`, the `python_requires` variable should be set to the
-> minimum supported version of Python. All supported minor versions of
-> Python should be in the test matrix and have binary artifacts built
-> for the release.
->
-> Minimum Python and NumPy version support should be adjusted upward on
-> every major and minor release, but never on a patch release.
-
-**FIXME** Projects could register and we could have a system file an issue
-on GitHub when it is time to drop a version.  And we should list the projects
-who agree to the SPEC here.
-
-Backward compatibility
-======================
-
-No backward compatibility issues.
-
-Alternatives
-============
-
-Ad-Hoc version support
-----------------------
-
-
-All CPython supported versions
-------------------------------
-
-
-Default version on Linux distribution
--------------------------------------
-
-
-N minor versions of Python
---------------------------
-
-
-Time window from the X.Y.1 Python release
------------------------------------------
+- [NetworkX](https://github.com/networkx/networkx)
 
 
 Discussion
 ==========
 
-References and Footnotes
-========================
+Historically, many projects were reluctant to drop support for older releases
+of Python, NumPy, SciPy, and Matplotlib.
+This prevented projects from taking advantage of new features and required
+additional logic to handle various software versions.
+This increases the burden on developers and prevented users from taking advantage
+of recent improvements.
 
-Code to generate support and drop schedule tables :
+[NEP 29](https://numpy.org/neps/nep-0029-deprecation_policy.html) describes
+several alternatives including ad-Hoc version support, all CPython supported
+versions, default version on Linux distribution, N minor versions of Python,
+and time window from the X.Y.1 Python release.
 
-    from datetime import datetime, timedelta
+Notes
+=====
 
-    data = """Jan 15, 2017: NumPy 1.12
-    Sep 13, 2015: Python 3.5
-    Dec 23, 2016: Python 3.6
-    Jun 27, 2018: Python 3.7
-    Jun 07, 2017: NumPy 1.13
-    Jan 06, 2018: NumPy 1.14
-    Jul 23, 2018: NumPy 1.15
-    Jan 13, 2019: NumPy 1.16
-    Jul 26, 2019: NumPy 1.17
-    Oct 14, 2019: Python 3.8
-    Dec 22, 2019: NumPy 1.18
-    Jun 20, 2020: NumPy 1.19
-    """
+- This builds on [NEP 29](https://numpy.org/neps/nep-0029-deprecation_policy.html).
 
-    releases = []
+- Code to generate support and drop schedule tables:
 
-    plus42 = timedelta(days=int(365*3.5 + 1))
-    plus24 = timedelta(days=int(365*2 + 1))
-
-    for line in data.splitlines():
-        date, project_version = line.split(':')
-        project, version = project_version.strip().split(' ')
-        release = datetime.strptime(date, '%b %d, %Y')
-        if project.lower() == 'numpy':
-            drop = release + plus24
-        else:
-            drop = release + plus42
-        releases.append((drop, project, version, release))
-
-    releases = sorted(releases, key=lambda x: x[0])
-
-
-    py_major,py_minor = sorted([int(x) for x in r[2].split('.')] for r in releases if r[1] == 'Python')[-1]
-    minpy = f"{py_major}.{py_minor+1}+"
-
-    num_major,num_minor = sorted([int(x) for x in r[2].split('.')] for r in releases if r[1] == 'NumPy')[-1]
-    minnum = f"{num_major}.{num_minor+1}+"
-
-    toprint_drop_dates = ['']
-    toprint_support_table = []
-    for d, p, v, r in releases[::-1]:
-        df = d.strftime('%b %d, %Y')
-        toprint_drop_dates.append(
-            f'On {df} drop support for {p} {v} '
-            f'(initially released on {r.strftime("%b %d, %Y")})')
-        toprint_support_table.append(f'{df} {minpy:<6} {minnum:<5}')
-        if p.lower() == 'numpy':
-            minnum = v+'+'
-        else:
-            minpy = v+'+'
-    print("On next release, drop support for Python 3.5 (initially released on Sep 13, 2015)")
-    for e in toprint_drop_dates[-4::-1]:
-        print(e)
-
-    print('============ ====== =====')
-    print('Date         Python NumPy')
-    print('------------ ------ -----')
-    for e in toprint_support_table[-4::-1]:
-        print(e)
-    print('============ ====== =====')
+{{< readcode file="specs/versions.py" >}}
