Restructure lazy loading blog post into spec-0002

--- a/content/specs/spec-0002.md
+++ b/content/specs/spec-0002.md
@@ -8,6 +8,8 @@ summary: |
   but without compromising performance.
 ---
 
+## Background and Motivation
+
 Early on, most scientific Python packages explicitly imported their submodules.  For example, you would be able to do:
 
 ```python
@@ -16,7 +18,7 @@ import scipy as sp
 sp.linalg.eig(...)
 ```
 
-This was convenient: it had the simplicity of a flat namespace, but with the organization of a nested one.  However, there was one drawback: importing submodules, especially large ones, introduced unacceptable slowdowns.  To address the problem, most libraries stopped importing submodules and relied on documentation to inform users on which submodules to import.
+This was convenient: it had the simplicity of a flat namespace, but with the organization of a nested one.  However, there was one drawback: importing submodules, especially large ones, introduced unacceptable slowdowns.  To address the problem, most libraries stopped importing submodules and relied on documentation to tell users which submodules to import.
 
 Commonly, code now reads:
 
@@ -33,7 +35,7 @@ import scipy.linalg as sla
 sla.eig(...)
 ```
 
-or 
+or
 
 ```python
 # Import individual functions, making it harder to know where they are from
@@ -42,13 +44,40 @@ from scipy.linalg import eig
 eig(...)
 ```
 
-## Python 3.7: a solution
+This SPEC proposes a lady loading mechanism—targeted at libraries—that
+avoids import slowdowns and brings back explicit submodule exports,
+but without slowing down imports.
 
-Python 3.7, with [PEP 562](https://www.python.org/dev/peps/pep-0562/), introduced the ability to override module `__getattr__` and `__dir__`.  In combination, these features make it possible to again provide access to submodules, but without incurring performance penalties.
+For example, it allows the following behavior:
 
-Modeled after the [blog post by Brett Cannon](https://snarky.ca/lazy-importing-in-python-3-7/), we propose a utility library for easily setting up so-called "lazy imports" so that submodules are only loaded upon accessing them.  We made a [trial pull request to scikit-image](https://github.com/scikit-image/scikit-image/pull/5101) to illustrate the concept.
+```python
+import skimage as ski  # cheap operation; does not load submodules
 
-It works as follows.  In the library's `__init__.py`, specify which submodules are lazily loaded:
+ski.filters  # cheap operation; loads the filters submodule, but not
+                 # any of its submodules or functions
+
+ski.filters.gaussian(...)  # loads the file in which gaussian is implemented
+                           # and calls the function
+
+```
+
+This has several advantages:
+
+1. It exposes a **nested namespace that behaves as a flat namespace**.  This avoids carefully having to import exactly the right combination of submodules, and allows interactive exploration of the namespace in an interactive terminal.
+
+2. It **avoids having to optimize for import cost**.  Currently, developers often move imports inside of functions to avoid slowing down importing their module. Lazy importing makes imports at any depth in the hierarchy cheap.
+
+3. It provides **direct access to submodules**, avoiding local namespace conflicts.  Instead of doing ``import scipy.linalg as sla`` to avoid clobbering a local ``linalg``, one can now assign a short name to each library and access its members directly: ``import scipy as sp; sp.linalg``.
+
+## Usage
+
+Python 3.7, with [PEP 562](https://www.python.org/dev/peps/pep-0562/), introduces the ability to override module `__getattr__` and `__dir__`.  In combination, these features make it possible to again provide access to submodules, but without incurring performance penalties.
+
+Modeled after the [blog post by Brett Cannon](https://snarky.ca/lazy-importing-in-python-3-7/), we propose a utility library for easily setting up so-called "lazy imports" so that submodules are only loaded upon accessing them.
+
+As an example, we will show how to set up lazy importing for
+`skimage.filters`.  In the library's main `__init__.py`, specify which
+submodules are lazily loaded:
 
 ```python
 __all__ = [
@@ -81,13 +110,10 @@ __getattr__, __dir__, __all__ = lazy.install_lazy(
 )
 ```
 
-(Also see the [implementation of `lazy.py`](https://github.com/scikit-image/scikit-image/blob/f5727872efec270d643dd2c281b6f245b03ff937/skimage/util/lazy.py).)
-
 The submodule is loaded only once it is accessed:
 
 ```python
 import skimage
-
 dir(skimage.filters)
 ```
 
@@ -102,7 +128,11 @@ skimage.filters.gaussian(...)  # Lazy load `gaussian` from
 skimage.filters.rank.mean_bilateral(...)  # Loaded once `rank` is accessed
 ```
 
-## Conclusion
+## Implementation
+
+Currently, a test implementation lives in [this pull request to scikit-image](https://github.com/scikit-image/scikit-image/pull/5101)—specifically, inside of [`lazy.py`](https://github.com/scikit-image/scikit-image/blob/f5727872efec270d643dd2c281b6f245b03ff937/skimage/util/lazy.py).
+
+## Discussion
 
 At this point, there exists an prototype of lazy loading, and we're
 showing it to the community to uncover design flaws, discover improvements, and solicit suggestions on APIs.
@@ -131,3 +161,8 @@ functions:
 Ultimately, we hope that lazy importing will become part of Python
 itself.  In the mean time, we now have the necessary mechanisms to
 implement it ourselves.
+
+## Related
+
+- https://github.com/scikit-image/scikit-image/pull/5101
+- https://github.com/networkx/networkx/pull/4401
