Minor tweaks to existing SPECs

--- a/content/specs/spec-0001.md
+++ b/content/specs/spec-0001.md
@@ -1,8 +1,8 @@
 ---
-title: SPEC 1 --- Minimum Python, NumPy, and SciPy
+title: SPEC 1 — Minimum Python, NumPy, and SciPy
 date: 2020-12-17T18:15:04-08:00
 draft: false
-author: 'Jarrod Millman \<<millman@berkeley.edu>\>'
+author: 'Jarrod Millman <millman@berkeley.edu>'
 summary: |
   Recommends a "time window-based" policy for dropping support for
   old versions of Python, NumPy, and SciPy.
