--- a/content/specs/spec-0000.md
+++ b/content/specs/spec-0000.md
@@ -1,8 +1,8 @@
 ---
-title: "SPEC 0 --- Purpose and Process"
+title: "SPEC 0 — Purpose and Process"
 date: 2020-12-17T19:53:08-08:00
 draft: false
-author: 'Jarrod Millman \<<millman@berkeley.edu>\>'
+author: 'Jarrod Millman <millman@berkeley.edu>'
 status: Draft
 summary: |
   The Scientific Python Ecosystem Coordination (SPEC) mechanism
