Convert 'related' to 'notes'

--- a/content/specs/spec-0002.md
+++ b/content/specs/spec-0002.md
@@ -1,14 +1,14 @@
 ---
-title: "SPEC 2 --- Lazy Loading for Submodules"
+title: "SPEC 2 — Lazy Loading for Submodules"
 date: 2020-12-17T18:15:04-08:00
 draft: false
-author: 'Stefan van der Walt \<<stefanv@berkeley.edu>\>'
+author: 'Stefan van der Walt <stefanv@berkeley.edu>'
 summary: |
   Recommends lazy loading functionality for an easily-accessible namespace,
   but without compromising performance.
 ---
 
-## Background and Motivation
+## Description
 
 Early on, most scientific Python packages explicitly imported their submodules.  For example, you would be able to do:
 
@@ -69,11 +69,12 @@ This has several advantages:
 
 3. It provides **direct access to submodules**, avoiding local namespace conflicts.  Instead of doing ``import scipy.linalg as sla`` to avoid clobbering a local ``linalg``, one can now assign a short name to each library and access its members directly: ``import scipy as sp; sp.linalg``.
 
-## Usage
+### Usage
 
 Python 3.7, with [PEP 562](https://www.python.org/dev/peps/pep-0562/), introduces the ability to override module `__getattr__` and `__dir__`.  In combination, these features make it possible to again provide access to submodules, but without incurring performance penalties.
 
-Modeled after the [blog post by Brett Cannon](https://snarky.ca/lazy-importing-in-python-3-7/), we propose a utility library for easily setting up so-called "lazy imports" so that submodules are only loaded upon accessing them.
+We propose a utility library for easily setting up so-called "lazy
+imports" so that submodules are only loaded upon accessing them.
 
 As an example, we will show how to set up lazy importing for
 `skimage.filters`.  In the library's main `__init__.py`, specify which
@@ -154,7 +155,7 @@ functions:
   - sobel_h
   - sobel_v
   - scharr
-  
+
 ...
 ```
 
@@ -162,7 +163,12 @@ Ultimately, we hope that lazy importing will become part of Python
 itself.  In the mean time, we now have the necessary mechanisms to
 implement it ourselves.
 
-## Related
+## Notes
 
-- https://github.com/scikit-image/scikit-image/pull/5101
-- https://github.com/networkx/networkx/pull/4401
+- The [lazy loading blog post by Brett Cannon](https://snarky.ca/lazy-importing-in-python-3-7/) showed the feasibility of the concept, and informed our design.
+
+- Technical improvements happened around the [scikit-image PR](https://github.com/scikit-image/scikit-image/pull/5101)
+
+- [mkinit](https://github.com/Erotemic/mkinit) is a tool that automates the generation of `__init__.py` files, and supports this lazy loading mechanism.  See, e.g., [NetworkX PR #4496](https://github.com/networkx/networkx/pull/4496).
+
+- The lazy loading discussion was initiated in [NetworkX PR #4401](https://github.com/networkx/networkx/pull/4401).
