--- a/content/specs/spec-0002.md
+++ b/content/specs/spec-0002.md
@@ -1,174 +1,94 @@
 ---
-title: "SPEC 2 — Lazy Loading for Submodules"
+title: SPEC 2 — Minimum Supported Python, NumPy, SciPy, and Matplotlib
 date: 2020-12-17T18:15:04-08:00
 draft: false
-author: 'Stefan van der Walt <stefanv@berkeley.edu>'
+author: 'Jarrod Millman <millman@berkeley.edu>'
 summary: |
-  Recommends lazy loading functionality for an easily-accessible namespace,
-  but without compromising performance.
+  Recommends a drop schedule for old versions of Python, NumPy, SciPy, and Matplotlib.
 ---
 
-## Description
 
-Early on, most scientific Python packages explicitly imported their submodules.  For example, you would be able to do:
+Description
+===========
 
-```python
-import scipy as sp
+This SPEC recommends that all projects across the Scientific Python
+ecosystem adopt a common time-based policy for dropping 
+support of older Python, NumPy, SciPy, and Matplotlib versions.
+We recommend that projects drop support for versions of Python 42 months after
+its intial release and for versions of NumPy, SciPy, and Matplotlib 24 months
+after their intial releases.
 
-sp.linalg.eig(...)
-```
+Drop Schedule
+-------------
 
-This was convenient: it had the simplicity of a flat namespace, but with the organization of a nested one.  However, there was one drawback: importing submodules, especially large ones, introduced unacceptable slowdowns.  To address the problem, most libraries stopped importing submodules and relied on documentation to tell users which submodules to import.
+    On Jan 13, 2021 drop support for NumPy 1.16 (initially released on Jan 13, 2019)
+    On May 17, 2021 drop support for SciPy 1.3 (initially released on May 17, 2019)
+    On May 18, 2021 drop support for Matplotlib 3.1 (initially released on May 18, 2019)
+    On Jul 26, 2021 drop support for NumPy 1.17 (initially released on Jul 26, 2019)
+    On Dec 16, 2021 drop support for SciPy 1.4 (initially released on Dec 16, 2019)
+    On Dec 22, 2021 drop support for NumPy 1.18 (initially released on Dec 22, 2019)
+    On Dec 26, 2021 drop support for Python 3.7 (initially released on Jun 27, 2018)
+    On Mar 05, 2022 drop support for Matplotlib 3.2 (initially released on Mar 04, 2020)
+    On Jun 21, 2022 drop support for NumPy 1.19 (initially released on Jun 20, 2020)
+    On Jun 22, 2022 drop support for SciPy 1.5 (initially released on Jun 21, 2020)
+    On Jul 17, 2022 drop support for Matplotlib 3.3 (initially released on Jul 16, 2020)
+    On Jan 01, 2023 drop support for SciPy 1.6 (initially released on Dec 31, 2020)
+    On Apr 14, 2023 drop support for Python 3.8 (initially released on Oct 14, 2019)
+    On Apr 05, 2024 drop support for Python 3.9 (initially released on Oct 05, 2020)
 
-Commonly, code now reads:
+Support Table
+-------------
 
-```python
-from scipy import linalg
-linalg.eig(...)
-```
+| Date         | Python   | NumPy   | SciPy   | Matplotlib   |
+|--------------|----------|---------|---------|--------------|
+| Jul 23, 2020 | 3.7+     | 1.16+   | 1.2+    | 3.0+         |
+| Sep 18, 2020 | 3.7+     | 1.16+   | 1.2+    | 3.1+         |
+| Dec 17, 2020 | 3.7+     | 1.16+   | 1.3+    | 3.1+         |
+| Jan 13, 2021 | 3.7+     | 1.17+   | 1.3+    | 3.1+         |
+| May 17, 2021 | 3.7+     | 1.17+   | 1.4+    | 3.1+         |
+| May 18, 2021 | 3.7+     | 1.17+   | 1.4+    | 3.2+         |
+| Jul 26, 2021 | 3.7+     | 1.18+   | 1.4+    | 3.2+         |
+| Dec 16, 2021 | 3.7+     | 1.18+   | 1.5+    | 3.2+         |
+| Dec 22, 2021 | 3.7+     | 1.19+   | 1.5+    | 3.2+         |
+| Dec 26, 2021 | 3.8+     | 1.19+   | 1.5+    | 3.2+         |
+| Mar 05, 2022 | 3.8+     | 1.19+   | 1.5+    | 3.3+         |
+| Jun 21, 2022 | 3.8+     | 1.20+   | 1.5+    | 3.3+         |
+| Jun 22, 2022 | 3.8+     | 1.20+   | 1.6+    | 3.3+         |
+| Jul 17, 2022 | 3.8+     | 1.20+   | 1.6+    | 3.4+         |
+| Jan 01, 2023 | 3.8+     | 1.20+   | 1.7+    | 3.4+         |
+| Apr 14, 2023 | 3.9+     | 1.20+   | 1.7+    | 3.4+         |
+| Apr 05, 2024 | 3.10+    | 1.20+   | 1.7+    | 3.4+         |
 
-Since the `linalg` submodule often conflicts with similar instances in other libraries, users also write:
+Implementation
+==============
 
-```python
-# Invent an arbitrary name for each submodule
-import scipy.linalg as sla
-sla.eig(...)
-```
+Projects adopting this SPEC should create a PR
+(https://github.com/scientific-python/scientific-python.org/pulls) to add their
+names to the list below:
 
-or
+- [NetworkX](https://github.com/networkx/networkx)
 
-```python
-# Import individual functions, making it harder to know where they are from
-# later on in code.
-from scipy.linalg import eig
-eig(...)
-```
 
-This SPEC proposes a lady loading mechanism—targeted at libraries—that
-avoids import slowdowns and brings back explicit submodule exports,
-but without slowing down imports.
+Discussion
+==========
 
-For example, it allows the following behavior:
+Historically, many projects were reluctant to drop support for older releases
+of Python, NumPy, SciPy, and Matplotlib.
+This prevented projects from taking advantage of new features and required
+additional logic to handle various software versions.
+This increases the burden on developers and prevented users from taking advantage
+of recent improvements.
 
-```python
-import skimage as ski  # cheap operation; does not load submodules
+[NEP 29](https://numpy.org/neps/nep-0029-deprecation_policy.html) describes
+several alternatives including ad-Hoc version support, all CPython supported
+versions, default version on Linux distribution, N minor versions of Python,
+and time window from the X.Y.1 Python release.
 
-ski.filters  # cheap operation; loads the filters submodule, but not
-                 # any of its submodules or functions
+Notes
+=====
 
-ski.filters.gaussian(...)  # loads the file in which gaussian is implemented
-                           # and calls the function
+- This builds on [NEP 29](https://numpy.org/neps/nep-0029-deprecation_policy.html).
 
-```
+- Code to generate support and drop schedule tables:
 
-This has several advantages:
-
-1. It exposes a **nested namespace that behaves as a flat namespace**.  This avoids carefully having to import exactly the right combination of submodules, and allows interactive exploration of the namespace in an interactive terminal.
-
-2. It **avoids having to optimize for import cost**.  Currently, developers often move imports inside of functions to avoid slowing down importing their module. Lazy importing makes imports at any depth in the hierarchy cheap.
-
-3. It provides **direct access to submodules**, avoiding local namespace conflicts.  Instead of doing ``import scipy.linalg as sla`` to avoid clobbering a local ``linalg``, one can now assign a short name to each library and access its members directly: ``import scipy as sp; sp.linalg``.
-
-### Usage
-
-Python 3.7, with [PEP 562](https://www.python.org/dev/peps/pep-0562/), introduces the ability to override module `__getattr__` and `__dir__`.  In combination, these features make it possible to again provide access to submodules, but without incurring performance penalties.
-
-We propose a utility library for easily setting up so-called "lazy
-imports" so that submodules are only loaded upon accessing them.
-
-As an example, we will show how to set up lazy importing for
-`skimage.filters`.  In the library's main `__init__.py`, specify which
-submodules are lazily loaded:
-
-```python
-__all__ = [
-    ...
-    'filters',
-    ...
-]
-
-from .util.lazy import install_lazy
-__getattr__, __dir__, _ = install_lazy(__name__, __all__)
-```
-
-Then, in each submodule's `__init__.py` (in this case, `filters/__init__.py`), specify which functions are to be loaded from where:
-
-```python
-from ..util import lazy
-
-__getattr__, __dir__, __all__ = lazy.install_lazy(
-    __name__,
-    submodules=['rank']
-    submod_funcs={
-        '_gaussian': ['gaussian', 'difference_of_gaussians'],
-        'edges': ['sobel', 'sobel_h', 'sobel_v',
-                  'scharr', 'scharr_h', 'scharr_v',
-                  'prewitt', 'prewitt_h', 'prewitt_v',
-                  'roberts', 'roberts_pos_diag', 'roberts_neg_diag',
-                  'laplace',
-                  'farid', 'farid_h', 'farid_v']
-    }
-)
-```
-
-The submodule is loaded only once it is accessed:
-
-```python
-import skimage
-dir(skimage.filters)
-```
-
-Furthermore, the functions inside of the submodule are loaded only once they are needed:
-
-```python
-import skimage
-
-skimage.filters.gaussian(...)  # Lazy load `gaussian` from
-                               # `skimage.filters._gaussian`
-
-skimage.filters.rank.mean_bilateral(...)  # Loaded once `rank` is accessed
-```
-
-## Implementation
-
-Currently, a test implementation lives in [this pull request to scikit-image](https://github.com/scikit-image/scikit-image/pull/5101)—specifically, inside of [`lazy.py`](https://github.com/scikit-image/scikit-image/blob/f5727872efec270d643dd2c281b6f245b03ff937/skimage/util/lazy.py).
-
-## Discussion
-
-At this point, there exists an prototype of lazy loading, and we're
-showing it to the community to uncover design flaws, discover improvements, and solicit suggestions on APIs.
-
-Once a lazy import interface is implemented, other interesting options become available.  For example, instead of specifying sub-submodules and functions the way we do above, one could do this in YAML files:
-
-```
-$ cat skimage/filters/init.yaml
-
-submodules:
-- rank
-
-functions:
-- _gaussian:
-  - gaussian
-  - difference_of_gaussians
-- edges:
-  - sobel
-  - sobel_h
-  - sobel_v
-  - scharr
-
-...
-```
-
-Ultimately, we hope that lazy importing will become part of Python
-itself.  In the mean time, we now have the necessary mechanisms to
-implement it ourselves.
-
-## Notes
-
-- The [lazy loading blog post by Brett Cannon](https://snarky.ca/lazy-importing-in-python-3-7/) showed the feasibility of the concept, and informed our design.
-
-- Technical improvements happened around the [scikit-image PR](https://github.com/scikit-image/scikit-image/pull/5101)
-
-- [mkinit](https://github.com/Erotemic/mkinit) is a tool that automates the generation of `__init__.py` files, and supports this lazy loading mechanism.  See, e.g., [NetworkX PR #4496](https://github.com/networkx/networkx/pull/4496).
-
-- The lazy loading discussion was initiated in [NetworkX PR #4401](https://github.com/networkx/networkx/pull/4401).
+{{< readcode file="specs/versions.py" >}}
