Various layout adjustments
- Display sidebar selectively on all pages other than specs and
  summits
- Add a "pinned" articles widget
- Customize SPEC list rendering

--- a/content/specs/spec-0000.md
+++ b/content/specs/spec-0000.md
@@ -8,6 +8,8 @@ summary: |
   The Scientific Python Ecosystem Coordination (SPEC) mechanism
   is used to recommend project policies, coding conventions,
   and standard tooling.
+spec_status: Active
+spec_type: Process
 ---
 
 What is a SPEC?
