Attempt to fix hugo build error.

--- a/content/specs/spec-0001.md
+++ b/content/specs/spec-0001.md
@@ -112,4 +112,4 @@ discussed before any vote is taken.  The workflow of a SPEC is detailed
 [here]({{< ref "/specs/spec-0000.md" >}}).
 
 A list of all existing SPECs is available [here]({{< ref
-"/specs/" >}}).
+"/specs/_index.md" >}}).
