Update SPEC tags

--- a/content/specs/spec-0000.md
+++ b/content/specs/spec-0000.md
@@ -3,13 +3,12 @@ title: "SPEC 0 — Purpose and Process"
 date: 2020-12-17T19:53:08-08:00
 draft: false
 author: 'Jarrod Millman <millman@berkeley.edu>'
-status: Draft
+spec_status: Draft
+spec_type: Process
 summary: |
   The Scientific Python Ecosystem Coordination (SPEC) mechanism
   is used to recommend project policies, coding conventions,
   and standard tooling.
-spec_status: Active
-spec_type: Process
 ---
 
 What is a SPEC?
