--- a/content/specs/spec-0001.md
+++ b/content/specs/spec-0001.md
@@ -3,7 +3,8 @@ title: SPEC 1 — Governance and Decision Making
 date: 2021-01-06T09:11:39-08:00
 draft: false
 author: 'Jarrod Millman <millman@berkeley.edu>'
-status: Draft
+spec_status: Draft
+spec_type: Process
 summary: |
   Governance and decision making for the Scientific Python Ecosystem Coordination project.
 ---
