--- a/content/specs/spec-0002.md
+++ b/content/specs/spec-0002.md
@@ -3,6 +3,8 @@ title: SPEC 2 — Minimum Supported Python, NumPy, SciPy, and Matplotlib
 date: 2020-12-17T18:15:04-08:00
 draft: false
 author: 'Jarrod Millman <millman@berkeley.edu>'
+spec_status: Draft
+spec_type: Standard
 summary: |
   Recommends a drop schedule for old versions of Python, NumPy, SciPy, and Matplotlib.
 ---
