--- a/content/specs/spec-0003.md
+++ b/content/specs/spec-0003.md
@@ -3,6 +3,8 @@ title: "SPEC 3 — Lazy Loading for Submodules"
 date: 2020-12-17T18:15:04-08:00
 draft: false
 author: 'Stefan van der Walt <stefanv@berkeley.edu>'
+spec_status: Draft
+spec_type: Standard
 summary: |
   Recommends lazy loading functionality for an easily-accessible namespace,
   but without compromising performance.
