Add readcode shortcode

--- a/content/specs/spec-0002.md
+++ b/content/specs/spec-0002.md
@@ -93,4 +93,4 @@ Notes
 
 - Code to generate support and drop schedule tables:
 
-{{< readcode file="specs/versions.py" >}}
+{{< readcode file="versions.py" lang="python" >}}
