Fix typo in spec-0003

--- a/content/specs/spec-0003.md
+++ b/content/specs/spec-0003.md
@@ -46,7 +46,7 @@ from scipy.linalg import eig
 eig(...)
 ```
 
-This SPEC proposes a lady loading mechanism—targeted at libraries—that
+This SPEC proposes a lazy loading mechanism—targeted at libraries—that
 avoids import slowdowns and brings back explicit submodule exports,
 but without slowing down imports.
 
