--- a/content/specs/spec-0000.md
+++ b/content/specs/spec-0000.md
@@ -11,8 +11,7 @@ summary: |
   and standard tooling.
 ---
 
-What is a SPEC?
-===============
+# Description
 
 The SPEC author is responsible for building consensus within the
 community and documenting dissenting opinions.
@@ -21,39 +20,30 @@ Because the SPECs are maintained as text files in a versioned
 repository, their revision history is the historical record of the
 feature proposal[^1].
 
-Types
------
+## Types
 
-SPEC Workflow
-=============
+# Implementation
 
+## Workflow
 
-Review and Resolution
----------------------
+### Review and Resolution
 
-How a SPEC becomes Accepted
----------------------------
+### How a SPEC becomes Accepted
 
-Maintenance
------------
+### Maintenance
 
 
-Format and Template
-===================
+## Format and Template
 
-SPECs are UTF-8 encoded text files using 
-
+SPECs are UTF-8 encoded text files using
 [Markdown](https://www.markdownguide.org/) format.
+We use [Hugo](https://gohugo.io/) to convert SPECs to HTML for viewing on the
+web [^2].
 
-Please see the `spec-template`{.interpreted-text role="doc"} file and
-for more information.
+Please see the [spec-template]({{< ref "/specs/spec-template.md" >}})
+file and for more information.
 
-We use [Hugo](https://www.markdownguide.org/) to convert SPECs to HTML
-for viewing on the web [^2].
-
-
-References and Footnotes
-========================
+# Notes
 
 [^1]: This historical record is available by the normal git commands for
     retrieving older revisions, and can also be browsed on
